# customized-elasticsearch-mcp-server

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.sample  pyproject.toml
.github/workflows/: docs.yml
src/: main.py
src/news_mcp_server/: app.py  mcp_server.py
src/news_mcp_server/clients/: __init__.py  elastic_client.py
src/news_mcp_server/config/: settings.py
src/news_mcp_server/exceptions/: __init__.py
src/news_mcp_server/middlewares/: audit.py  auth.py  exception.py  monitor.py  rate_limit.py  redis_session.py  session.py
src/news_mcp_server/schemas/: __init__.py  news.py
src/news_mcp_server/services/: news_service.py
src/news_mcp_server/utils/: logger.py
tests/integration/: test_mcp_endpoints.py
tests/unit/: test_elastic_client.py
